  VFSFile.deletePath
  VFSFile.type
  VFSFile.length
  VFSFile.hidden
  VFSFile.canRead
  VFSFile.canWrite
  ReadWriteLock
  (Matthieu Casanova)

- Applied patch #2809978 to remove use of deprecated methods in jEdit's
  textarea (#2809978 from Kevin Hunter, Matthieu Casanova)

}}}
{{{ Editing

- Fixed indentation in javacc edit mode that can fail if a token contains
  "else" (Matthieu Casanova)

- Factor Mode fix (#3100731 - Valeri Mytinski)  

- Added new keywords to C# edit mode (patch #3120746 from nherzing,
  Matthieu Casanova)

- New edit mode option: Elastic Tabstops. (Anshal Shukla + Shlomy Reinstein)

- Applied patch from Matthew Gilbert to add ability to increase/decrease line
  spacing in the text area. (#3023134, Dale Anson)

- Added jflex edit mode (Matthieu Casanova)

- Added lex/flex edit mode (Matthieu Casanova)

- New mode for Oracle PL/SQL 11. (#3078863 - Diogo Kollross)

- Haxe mode update (Dion Amago # 3123602)

- Updated erlang mode and associated *.hrl to erlang language
  (patch #3042398 from jclopes, Matthieu Casanova)

- Added coffee edit mode (patch #3173375 from Dennis Hotson, Matthieu Casanova)

}}}
{{{ UI
- Error Widget now use the same color as Invalid token instead of being always
  red (Matthieu Casanova)

- Ability to customize the browser context menu (feature #3354306)
  (Matthieu Casanova)

- New Status bar widget to monitor task manager. (feature #3316561)
  (Matthieu Casanova)

- Moved Default Line Separator Char from General to Encodings Option Pane.
  
- The Statusbar widget choice in global options has now a preview to see how
  the status bar will look like (Matthieu Casanova)

- A new status bar widget is added to show the last modified time of the current
  buffer (feature request #1551454 - Matthieu Casanova)

- The Macros menu can now be splitted if there are too many macros or
  macro folders (#3172647 - Matthieu Casanova)

- Updated ColorWellButton to use the dialog provided by JColorChooser rather